# coding-sql

./: README.md
audit/: audit_toolkit.sql  audit_users_table.sql
custom_alert_emails/: dbo.usp_send_job_custom_email.sql  enable_database_mail.sql
database_size/: database_files_detail.sql  database_storage_alert.sql  database_storage_breakdown.sql  largest_table.sql  memory_settings.sql  sp_spaceused.sql  total_used_storage.sql
free_space/: database_cleanup.sql  partition_filegroup_allocation.sql  shrink.sql
functions/: dbo.google_data.sql
helps/: change_language.sql  check_cascade.sql  comments.sql  create_credential_proxy.sql  iterate_clean_tables.sql  median_of_total_points.sql  server_info.sql
index/: check_index_fragmentation.sql  clustered_columnstore_index.sql  clustered_index.sql  nonclustered_columnstore_index.sql  nonclustered_index.sql  nonclustered_index_include.sql  ola_hallengren.sql  rebuild_index.sql  reorganize_index.sql  statistics.sql
lock/: blocking_sessions_report.sql  sp_who2.sql  specific_session.sql
query_store/: enable.sql  execution_count.sql  force_plan.sql  highest_avg_row_count.sql  highest_wait_durations.sql  historical_regression_performance.sql  last_queries_executed.sql  longest_avg_exec_time.sql  queries_that_recently_regressed_performance.sql  queries_w_multiple_plans.sql
server/: linked_server.sql  query_with_other_server.sql  server_roles.sql
sql_access/: deny_view_access.sql  drop_user.sql  grant_statements_access.sql  grant_view_access.sql  (+3 more)
sql_monitor/sql-server-metrics/: compose.yaml  main.py  pyproject.toml
(+161 files in other folders)
